解决Q1&2 导航栏下拉菜单显示不充分

--- a/XMUER/Pages/Album/MyAlbum.cshtml
+++ b/XMUER/Pages/Album/MyAlbum.cshtml
@@ -56,6 +56,7 @@
                     .options[document.getElementById("selAlbum").selectedIndex].value;
 
                 var formData = new FormData($('#frmUploadPhoto')[0])
+                console.log(formData)
 
                 $.ajax({
                     url: "/home/album/" + albumId,
