--- a/XMUER/Pages/Shared/_Layout.cshtml
+++ b/XMUER/Pages/Shared/_Layout.cshtml
@@ -106,8 +106,8 @@
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="False">
                                 @name
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="~/Private/UserHome">个人主页</a>
+                            <div class="dropdown-menu" style="margin-left:-80px;text-align:center" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item"  href="~/Private/UserHome">个人主页</a>
                                 <a class="dropdown-item" href="~/Private/UserInfo">我的资料</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="javascript:logout();">登出</a>
